ExAloneInTheDark/5-0-cycle_detector/5-0-cycle_detector.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
ox-j1.21-school.ru
Darwin 16.7.0 x86_64
$> date
Sat Jan 18 14:41:04 MSK 2020
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2020/c-exam-alone-in-the-dark-beginner/exam_20200118/gloriann

= Git history ==================================================================
$> git -C /var/folders/0x/9jdd_xcn3036wm45bwhl7pdw0000gq/T/tmpwMVhGj/user log --pretty='%H - %an, %ad : %s'
7200315673c21caa71e4d4d01d16a5c01c473b3f - Exam 42, Sat Jan 18 14:40:35 2020 +0300 : errors
b9afbc53adf5bfe3454508f40fcb68e32f93ce10 - Exam 42, Sat Jan 18 13:33:19 2020 +0300 : done
 
= Collected files ==========================================
$> ls -lAR /var/folders/0x/9jdd_xcn3036wm45bwhl7pdw0000gq/T/tmpwMVhGj/user
total 8
-rw-r--r--  1 deepthought  deepthought  503 Jan 18 14:41 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jan 18 14:41 cycle_detector
drwxr-xr-x  3 deepthought  deepthought  102 Jan 18 14:41 ft_split

/var/folders/0x/9jdd_xcn3036wm45bwhl7pdw0000gq/T/tmpwMVhGj/user/cycle_detector:
total 8
-rw-r--r--  1 deepthought  deepthought  691 Jan 18 14:41 cycle_detector.c

/var/folders/0x/9jdd_xcn3036wm45bwhl7pdw0000gq/T/tmpwMVhGj/user/ft_split:
total 8
-rw-r--r--  1 deepthought  deepthought  1180 Jan 18 14:41 ft_split.c
 
= cycle_detector ===============================================================
$> gcc -Wextra -Wall -Werror main.c test_cycle_detector.c cycle_detector.c -o user_exe 
cycle_detector.c:20:9: error: assigning to 't_list *' (aka 'struct s_list *') from 'const t_list *' (aka 'const struct s_list *') discards qualifiers [-Werror,-Wincompatible-pointer-types-discards-qualifiers]
        l_item = list;
               ^ ~~~~
cycle_detector.c:34:20: error: assigning to 't_list *' (aka 'struct s_list *') from 'const t_list *' (aka 'const struct s_list *') discards qualifiers [-Werror,-Wincompatible-pointer-types-discards-qualifiers]
                new_a_item->addr = list;
                                 ^ ~~~~
cycle_detector.c:17:11: error: variable 'a_item' is uninitialized when used here [-Werror,-Wuninitialized]
        a_head = a_item;
                 ^~~~~~
cycle_detector.c:12:21: note: initialize the variable 'a_item' to silence this warning
        t_addr_list     *a_item;
                               ^
                                = NULL
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
